# TheGamblingFinance

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/db/: auth_sessions.rs  buy_ins.rs  cash_outs.rs  leaderboard.rs  mod.rs  nights.rs  settlement.rs  trades.rs  users.rs
backend/src/domain/: mod.rs  money.rs  settlement.rs
backend/src/dto/: activity.rs  leaderboard.rs  mod.rs  night.rs  settlement.rs  user.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/routes/: auth.rs  buy_ins.rs  cash_outs.rs  health.rs  leaderboard.rs  mod.rs  nights.rs  settlement.rs  trades.rs  users.rs
backend/src/util/: cookies.rs  mod.rs  password.rs
backend/tests/: settlement_property.rs
docker/: backend.Dockerfile  compose.yaml  frontend.Dockerfile
docs/: agents.md  api.md  style-guide.md
docs/adr/: 0001-single-crate-backend.md  0002-iou-model.md
docs/contracts/: openapi.json  schema.sql
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: AppShell.vue  BottomNav.vue  BottomSheet.vue  Button.vue  Card.vue  ConfirmDialog.vue  ConfirmHost.vue  CurrencyInput.vue  LeaderboardRow.vue  PlayerChip.vue  SideNav.vue  Stat.vue  StatusPill.vue  TextField.vue  Toast.vue  ToastHost.vue  TopBar.vue
frontend/src/composables/: useConfirm.ts  useMoney.ts  useToast.ts
frontend/src/mocks/: browser.ts  handlers.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: index.css  tokens.css
frontend/src/types/: api.ts
frontend/src/views/: LoginView.vue  UiDemoView.vue
migrations/: 20260421120000_p0_init_users_and_sessions.sql  20260421120100_p0_nights_and_members.sql  20260421120200_p0_activity_tables.sql  20260421120300_p0_settlement_tables.sql  20260421120400_p0_indexes.sql
(+10 files in other folders)
