[package]
name    = "gamblingfinance"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.80"

# Single binary; the library target exists only so integration tests
# in `tests/` can link against internal modules.
[lib]
name = "gamblingfinance"
path = "src/lib.rs"

[[bin]]
name = "gamblingfinance"
path = "src/main.rs"

[dependencies]
# --- HTTP / runtime ---
axum       = { version = "0.7", features = ["macros"] }
tokio      = { version = "1", features = ["full"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
# Rate-limiting for login endpoints. Wired in Phase 1 by Backend-Auth.
tower_governor = "0.4"
# Pulled in by tower_governor but not re-exported; we need to name
# `NoOpMiddleware` in our rate-limit layer's return type.
governor = "0.6"

# --- Database ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
    "ipnetwork",
] }

# --- Serialization ---
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Identity / crypto ---
uuid   = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
# INET column binding for auth_sessions.ip_addr. sqlx 0.8 pins 0.20.
ipnetwork = "0.20"

# --- Config / errors / logging ---
envy               = "0.4"
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- OpenAPI (wired in Phase 1 by Backend-Core) ---
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
proptest   = "1"
tokio-test = "0.4"

[profile.release]
# Smaller binaries; important for Docker image size.
lto          = "thin"
codegen-units = 1
strip        = "symbols"
